
SMTv3.3 Release Notes
_____________________
	API Additions:
		-getZoneByName() this takes a string and returns a Zone, optionally a class such as Zone.class can be given as a second parameter, in which case an attempt to cast it to this class will be made. This should allow the use of less globally defined Zones

SMTv3.2 Release Notes
_____________________

	API Changes:
		-Zone.getTouches() and TouchClient.getTouchesFromZone(Zone) return an array now instead of a collection, the old forms are now called Zone.getTouchCollection() and TouchClient.getTouchCollectionFromZone(Zone)
		-TextZone constructor has a selectable boolean, to specify whether highlighting is done, in addition to blur
		-Touch.getLastPoint() now returns a Point instead of a TuioPoint
		-TouchClient.getTouches() now returns an array, the old form is available using TouchClient.getTouchCollection()
		-Zone.activeTouches now private instead of public
		-Touch no longer has getScreenX() and getScreenY(), they do not work(aren't updated properly), and Touch.x and Touch.y already give screen relative co-ordinates
		-TouchClient no longer has constructors, use TouchClient.init() instead
		-TouchClient.setDrawTouchPoints() now takes an enum TouchDraw instead of a boolean, options are NONE, DEBUG, and SMOOTH
		-some TextZone constructors have some added parameters to allow using all combinations of functionality
	
	API Additions:
		-applet and client variables in Zone now protected
		-parent variable in Zone now protected
		-Touch.getCurrentPoint(), similar to getLastPoint except gets the current point
		-TextZone now has an additional constructor that specifies fontSize, blur, selectable, and name
		-Zone now has getGlobalMatrix() which returns a PMatrix3D of the Zone's matrix relative to global coordinates
		-KeyboardZone now has the following additional methods: clearKeyListeners(), getZoneKeyListeners(), getKeyListeners()