@@ -3,6 +3,7 @@ SMTv3.3 Release Notes
 _____________________
 	API Additions:
 		-getZoneByName() this takes a string and returns a Zone, optionally a class such as Zone.class can be given as a second parameter, in which case an attempt to cast it to this class will be made. This should allow the use of less globally defined Zones
+		-many built-in Zones have more protected variables and protected methods to make it easier to re-implement their draw method
 
 SMTv3.2 Release Notes
 _____________________
